--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "William Estrada",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "local": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
